--- a/snake-game/src/index.css
+++ b/snake-game/src/index.css
@@ -5,3 +5,12 @@
   height: 500px;
   border: 2px solid black;
 }
+
+.snake-dot {
+  position: absolute;
+  width: 2%;
+  height: 2%;
+  background-color: black;
+  border: 1px solid white;
+  z-index: 2;
+}
