--- a/snake-game/src/index.css
+++ b/snake-game/src/index.css
@@ -14,3 +14,12 @@
   border: 1px solid white;
   z-index: 2;
 }
+
+.snake-food {
+  position: absolute;
+  width: 2%;
+  height: 2%;
+  background-color: red;
+  border: 1px solid white;
+  z-index: 1;
+}
